# shapez2_blueprint_renderer

./: .gitignore  Cargo.toml  Dockerfile  LICENSE.txt  README.md  blueprint_render.js  build.rs  config.ts  exec.ts  index.ts  models.js  package.json  render.js  tsconfig.json
src/: blueprint.rs  frag.glsl  main.rs  render.rs  tweaks.rs  vert.glsl
src/render/: context.rs  general.rs  gl.rs  mod.rs  shader.rs  util.rs  vertex.rs
