[package]
name = "shapez2_blueprint_renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
flate2 = "1.0.25"
serde_json = "1.0.96"
serde = { version = "1.0.160", features = ["derive"] }
base64 = "0.21.0"
clap = { version = "4.2.2", features = ["derive"] }

glium = "0.26"
obj = "0.10.2"
image = "0.24.6"
nalgebra-glm = "0.18.0"

num-traits = "0.2.15"
